<resources>
    <!-- 公共 -->
    <string name="app_name">电动车秘书</string>
    <string name="app_id">输入您讯飞的appid</string>
    <string name="app_require_input">必填</string>
    <string name="app_require_check">必选</string>
    <string name="save">保存</string>
    <string name="sex">性别</string>

    <!-- preference -->
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>

    <!-- login activity -->
    <string name="register">注册</string>

    <!-- main activity -->
    <string name="company">捷可视</string>

    <!-- CustomDialog -->
    <string name="prompt">提示</string>
    <string name="exit_app">你确定要退出应用吗?</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="string_confirm">确定</string>
    <string name="string_reset">清除</string>

    <!-- network -->
    <string name="no_network">无网络，请联网后重试</string>
    <string name="server_timeout">网络请求失败，请稍后重试</string>
    <string name="client_timeout">网络请求失败，请检查你的网络设置</string>

    <!-- http -->
    <string name="data_error">数据异常...</string>
    <string name="http_download_failed">下载失败</string>

    <!-- map -->
    <string name="txt_track_prompt">途经点</string>
    <string name="txt_start">起点</string>
    <string name="txt_end">终点</string>

    <!-- car_status -->
    <string name="equipment_serial_number">设备编号：</string>
    <string name="positioning_state">定位状态：</string>
    <string name="online_status">在线状态：</string>
    <string name="acc">ACC：</string>
    <string name="main_power">主电源：</string>
    <string name="lock_car_status">锁车状态：</string>
    <string name="direction">方向：</string>
    <string name="address">最后位置：</string>

    <!-- 下拉刷新控件 -->
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新···</string>
    <string name="pull_to_refresh_update">最近更新：%s</string>
    <string name="pull_to_refresh_load_more">查看更多</string>
    <string name="pull_to_refresh_load_finish">已加载完全部数据</string>
    <string name="pull_to_refresh_loading">正在加载···</string>
    <string name="pull_to_refresh_loading_label">松开查看更多</string>
    <string name="loadding">正在加载中...</string>

    <!-- topbar -->
    <string name="top_bar_location">卫星定位</string>
    <string name="top_bar_alarm_message">报警消息</string>
    <string name="top_bar_chart">每日统计</string>
    <string name="top_bar_my">我</string>
    <string name="top_bar_base_info">基本资料</string>
    <string name="top_bar_car_info">车辆资料</string>
    <string name="top_bar_insurance_clause">保险信息</string>
    <string name="top_bar_setting">设置</string>
    <string name="top_bar_today_statistics">行车数据统计</string>
    <string name="top_bar_about">关于</string>
    <string name="top_bar_register">用户注册</string>
    <string name="top_bar_login">登录</string>
    <string name="top_bar_submit">提交</string>
    <string name="top_bar_insurance_policy">保险条款</string>
    <string name="top_bar_terms_of_service">服务条款</string>
    <string name="top_bar_book_install">预约安装</string>
    <string name="top_bar_deal_insurance">办理保险</string>
    <string name="top_bar_battery">电量监测</string>

    <!-- my -->
    <string name="my_base_info">基本资料</string>
    <string name="my_car_info">车辆资料</string>
    <string name="my_remote_lock_car">远程锁车</string>
    <string name="my_remote_open_car">远程解锁</string>
    <string name="my_deal_insurance">办理保险</string>
    <string name="my_insurance_info">保险信息</string>
    <string name="my_insurance_clause">保险条款</string>
    <string name="my_setting">设置</string>
    <string name="setting_contact_customer_service">联系客服</string>
    <string name="setting_terms_of_service">服务条款</string>
    <string name="setting_about">关于</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_phone_number">0531-67805000</string>

    <!-- base_information -->
    <string name="base_information_equipment_serial_number">设备编号</string>
    <string name="base_information_imei">IMEI</string>
    <string name="base_information_data_card">数据卡号</string>
    <string name="base_information_open_date">开通日期</string>
    <string name="base_information_due_date">到期日期</string>
    <string name="base_information_name">姓名</string>
    <string name="base_information_sex">性别</string>
    <string name="base_information_id_card">身份证号</string>
    <string name="base_information_phone">联系电话</string>
    <string name="base_information_area">所在地区</string>
    <string name="base_information_address">详细地址</string>

    <!-- car_information -->
    <string name="car_information_brand">车辆品牌</string>
    <string name="car_information_models">车辆型号</string>
    <string name="car_information_motor_number">电机编号</string>
    <string name="car_information_frame_number">车架编号</string>
    <string name="car_information_buy_date">购买日期</string>
    <string name="car_information_buy_price">购买价格</string>
    <string name="car_information_car_photo">车辆照片</string>

    <!-- insurance_clause -->
    <string name="insurance_clause_equipment_serial_number">设备编号</string>
    <string name="insurance_clause_policy_number">保险单号</string>
    <string name="insurance_clause_start_date">办理日期</string>
    <string name="insurance_clause_used_date">起保日期</string>
    <string name="insurance_clause_due_date">截止日期</string>
    <string name="insurance_clause_insured_person">被保险人</string>
    <string name="insurance_clause_id_card">身份证号</string>
    <string name="insurance_clause_phone">联系电话</string>
    <string name="insurance_clause_coverage_area">承保区域</string>

    <!-- chart -->
    <string name="chart_today_mileage">今日里程</string>
    <string name="chart_average_speed">平均速度</string>
    <string name="chart_max_speed">最高速度</string>
    <string name="chart_min_speed">最低速度</string>

    <!-- register -->
    <string name="register_imei">IMEI</string>
    <string name="register_equipment_serial_number">设备编号</string>
    <string name="register_data_card">数据卡号</string>
    <string name="register_name">姓名</string>
    <string name="register_your_name">您的姓名</string>
    <string name="register_sex">性别</string>
    <string name="register_id_card">身份证号</string>
    <string name="register_phone">联系电话</string>
    <string name="register_area">所在地区</string>
    <string name="register_address">详细地址</string>
    <string name="register_remote_control">远程控制</string>
    <string name="register_voltage">电动车电压</string>
    <string name="register_dealer_number">经销商编号</string>
    <string name="register_salesman_name">业务员姓名</string>
    <string name="register_submit">提交</string>
    <string name="book_install_count">所需数量</string>

    <!-- deal_insurance -->
    <string name="deal_insurance_car_photo">车辆照片</string>
    <string name="deal_insurance_id_card_positive">身份证正面</string>
    <string name="deal_insurance_id_card_negative">身份证反面</string>
    <string name="deal_insurance_certificate_photos">合格证照片</string>
    <string name="deal_insurance_invoice_or_receipt">发票或收据</string>
    <string name="deal_insurance_motor_number">电机编号</string>
    <string name="deal_insurance_frame_number">车架编号</string>
    <string name="deal_insurance_coverage_area">承保区域</string>
    <string name="deal_insurance_car_brand">车辆品牌</string>
    <string name="deal_insurance_car_model">车辆型号</string>
    <string name="deal_insurance_buy_date">购买日期</string>
    <string name="deal_insurance_buy_price">购买价格</string>

</resources>
