<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <com.jcsoft.emsystem.view.TopBarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:back_is_finish="true"
        app:center_text="@string/top_bar_setting"
        app:has_center="true"
        app:has_left="true"
        app:has_left_clickable="true"
        app:left_icon="@mipmap/back_icon"
        app:left_text="@string/top_bar_my" />

    <com.jcsoft.emsystem.view.RowLabelValueView
        android:id="@+id/rlvv_equipment_serial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:row_label_value_bottom_line="2"
        app:row_label_value_label="@string/setting_contact_customer_service"
        app:row_label_value_top_line="1"
        app:row_label_value_value="@string/setting_phone_number" />

    <com.jcsoft.emsystem.view.RowEntryView
        android:id="@+id/rev_terms_of_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:row_entry_can_click="true"
        app:row_entry_has_right_arrow="true"
        app:row_entry_icon_visible="false"
        app:row_entry_text="@string/setting_terms_of_service" />

    <com.jcsoft.emsystem.view.RowEntryView
        android:id="@+id/rev_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:row_entry_can_click="true"
        app:row_entry_has_right_arrow="true"
        app:row_entry_icon_visible="false"
        app:row_entry_text="@string/setting_about" />

    <View
        style="@style/style_base_line"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:text="@string/setting_logout"
        android:textColor="@color/gray_3"
        android:textSize="16sp" />

    <View style="@style/style_base_line" />
</LinearLayout>
